--- a/web/secured/welcome.xhtml
+++ b/web/secured/welcome.xhtml
@@ -13,13 +13,14 @@
                          emptyMessage="Liste boştur.">
                 <f:facet name="header" id="hee">
                     <div style="text-align: center">  Kullanıcı Listesi</div>
-                    <div style="text-align: right"><p:commandButton value="Yeni Kullanıcı Ekle" icon="fa-user-plus" 
-                                                                    action="#{kullaniciManagedBean.temizleKullaniciEkle}"
-                                                                    oncomplete="PF('dlg').show();" update="ekleForm">
+                    <div style="text-align: right">
+                        <p:commandButton value="Yeni Kullanıcı Ekle" icon="fa-user-plus" 
+                                         action="#{kullaniciManagedBean.temizleKullaniciEkle}"
+                                         oncomplete="PF('dlg').show();" update="ekleForm">
                             <p:resetInput target="ekleForm" />
                         </p:commandButton></div>                    
                 </f:facet>
-                <p:column headerText="TC Kimlik No" style="text-align: center">
+                <p:column headerText="TC Kimlik No" style="text-align: center; width: 100px">
                     <p:outputLabel value="#{c.tcKimlikNo}" />
                 </p:column>
                 <p:column headerText="Ad Soyad" style="text-align: center">                   
@@ -27,8 +28,16 @@
                 </p:column>
                 <p:column headerText="E-Posta" style="text-align: center">                   
                     <p:outputLabel value="#{c.email}" />
-                </p:column>                                
-                <p:column headerText="Fotoğraf" style="text-align: center">
+                </p:column>   
+                <p:column headerText="Arabalar" style="text-align: center">                   
+                    <p:dataTable value="#{c.arabaListesi}" var="araba" id="araba" 
+                                 emptyMessage="Araba yoktur." styleClass="noHeader">
+                        <p:column style="text-align: center">                   
+                            <p:outputLabel value="#{araba.arabaMarka}" />
+                        </p:column> 
+                    </p:dataTable>
+                </p:column> 
+                <p:column headerText="Fotoğraf" style="text-align: center; width: 80px;">
                     <center>
                         <p:graphicImage id="myImage" value="#{imageStreamer.image}" 
                                         height="100" alt="Resim bulunamadı.">
