İki Tarih örneği...

--- a/web/secured/template.xhtml
+++ b/web/secured/template.xhtml
@@ -41,6 +41,11 @@
             <p:layoutUnit position="center">
                 <ui:insert name="content"/>
             </p:layoutUnit>
+            <p:layoutUnit position="south" size="30">
+                <center>
+                    <p:outputLabel value="Copyright bla bla" />
+                </center>
+            </p:layoutUnit>
         </p:layout>
     </h:body>
 </html>
