--- a/web/secured/welcome.xhtml
+++ b/web/secured/welcome.xhtml
@@ -10,7 +10,7 @@
                 <br/><br/><br/>
                 <h:outputText value="Projede " style="font-size: 20px;"/>       
                 <p:commandLink id="ajax" action="#{navigationBean.redirectToKullanici}" ajax="false">
-                    <h:outputText value="#{sessionMB.kullaniciSayisi} ADET" style="color: red; font-size: 20px;" />
+                    <h:outputText value="#{anaSayfaMB.kullaniciSayisi} ADET" style="color: red; font-size: 20px;" />
                 </p:commandLink>
                 <h:outputText value=" kullanıcı bulunmaktadır." style="font-size: 20px;"/>  
             </center> 
