Otomatik session kapatma işlemleri eklendi.

--- a/web/secured/kullaniciIslem.xhtml
+++ b/web/secured/kullaniciIslem.xhtml
@@ -14,7 +14,7 @@
                 <f:facet name="header" id="hee">
                     <div style="text-align: center">  Kullanıcı Listesi</div>
                     <div style="text-align: right">
-                        <p:commandButton value="Yeni Kullanıcı Ekle" icon="fa-plus" 
+                        <p:commandButton value="Yeni Kullanıcı Ekle" icon="ui-icon-plusthick" 
                                          action="#{kullaniciIslemMB.temizleKullaniciEkle}"
                                          oncomplete="PF('dlg').show();" update="ekleForm">
                             <p:resetInput target="ekleForm" />
