--- a/web/secured/template.xhtml
+++ b/web/secured/template.xhtml
@@ -42,6 +42,68 @@
                 </h:form>
             </p:layoutUnit>
             <p:layoutUnit position="center">
+
+                <p:idleMonitor timeout="10000" onidle="PF('idleDialog').show();" />
+                <p:dialog id="confirmDialog" appendTo="@(body)" modal="true"                              
+                          header="Are you there?"  widgetVar="idleDialog"
+                          onShow="startIdleMonitor()">
+                    <h:outputText value="Oturum " />
+                    <h:outputText id="dialog-countdown" style="font-weight: bold;"/>
+                    <h:outputText value=" saniye sonra otamatik olarak kapanacaktır." />
+                    <h:form>
+                        <br/>
+                        <center>
+                            <p:commandButton id="confirm" value="Devam Et" 
+                                             oncomplete="PF('idleDialog').hide()"
+
+                                             action="#{sessionMB.devamEt}" onclick="stopCount()"/>
+
+                            <p:commandButton id="Logout" value="Çık" 
+                                             oncomplete="PF('idleDialog').hide()"
+                                             process="@this" update="@all"
+                                             action="#{sessionMB.cikis}" />
+                        </center>
+                        <p:remoteCommand name="logout" action="#{sessionMB.cikis}" />
+                    </h:form>
+                    <script type="text/javascript">
+                        var TIME = 10; // in seconds
+                        var countTimer = TIME;
+                        var processTimer;
+                        var timer_is_on = 0;
+
+                        var countDownDiv = "dialog-countdown";
+                        var txtCountDown = null;
+                        if (!txtCountDown)
+                            txtCountDown = document.getElementById(countDownDiv);
+
+                        function startIdleMonitor() {
+                            countTimer = TIME;
+                            txtCountDown.innerHTML = countTimer;
+                            doTimer();
+                        }
+                        function timedCount() {
+                            txtCountDown.innerHTML = countTimer;
+                            if (countTimer == 0) {
+                                stopCount();
+                                logout();
+                                return;
+                            }
+                            countTimer = countTimer - 1;
+                            processTimer = setTimeout("timedCount()", 1000);
+                        }
+                        function doTimer() {
+                            if (!timer_is_on) {
+                                timer_is_on = 1;
+                                timedCount();
+                            }
+                        }
+                        function stopCount() {
+                            clearTimeout(processTimer);
+                            timer_is_on = 0;
+                        }
+                    </script>
+                </p:dialog>
+
                 <ui:insert name="content"/>
             </p:layoutUnit>
             <p:layoutUnit position="south" size="30">
