Accordion Panel örneği eklendi.

--- a/web/secured/carousel.xhtml
+++ b/web/secured/carousel.xhtml
@@ -25,7 +25,7 @@
         </h:form>    
 
         <p:dialog widgetVar="carousel" width="1000px" height="600px" modal="true" styleClass="customDialog"
-                  closeOnEscape="true" closable="true" appendTo="@(body)">
+                  closeOnEscape="true" closable="true" appendTo="@(body)" maximizable="true">
             <h:form id="denemeForm">               
                 <center>
                     <p:carousel value="#{carouselMB.arabaListesi}" var="araba" 
