--- a/web/secured/kullaniciIslem.xhtml
+++ b/web/secured/kullaniciIslem.xhtml
@@ -76,7 +76,7 @@
             </p:dataTable>
             <br/>
             <center>
-                <p:commandButton action="#{kullaniciIslemMB.startDownloadFromDatabase}" value="Dosya İndir (Örnek)" ajax="false"/>
+                <p:commandButton actionListener="#{kullaniciIslemMB.startDownloadFromDatabase}" value="Dosya İndir (Örnek)" ajax="false"/>
             </center>           
         </h:form>
 
